Avance3/codigo/parser/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> creadirprocglobal a c cancion
Rule 2     creadirprocglobal -> <empty>
Rule 3     a -> empty
Rule 4     a -> vars b
Rule 5     b -> empty
Rule 6     b -> a
Rule 7     c -> empty
Rule 8     c -> funcion d
Rule 9     d -> empty
Rule 10    d -> c
Rule 11    vars -> VAR v : tipo ;
Rule 12    v -> ID
Rule 13    funcion -> FUNC tipo ID meterfuncion ( params ) f bloque
Rule 14    meterfuncion -> <empty>
Rule 15    f -> empty
Rule 16    f -> vars g
Rule 17    g -> empty
Rule 18    g -> f
Rule 19    params -> empty
Rule 20    params -> tipo ID meterparams h
Rule 21    meterparams -> <empty>
Rule 22    h -> empty
Rule 23    h -> , params
Rule 24    i -> empty
Rule 25    i -> estatuto j
Rule 26    j -> empty
Rule 27    j -> i
Rule 28    bloque -> { i }
Rule 29    cancion -> CANCION ( CTEE ) metercancion f bloque
Rule 30    metercancion -> <empty>
Rule 31    estatuto -> asignacion
Rule 32    estatuto -> if
Rule 33    estatuto -> for
Rule 34    estatuto -> return
Rule 35    estatuto -> while
Rule 36    estatuto -> play
Rule 37    estatuto -> print
Rule 38    asignacion -> ID = neur8 k ;
Rule 39    neur8 -> <empty>
Rule 40    k -> expresion
Rule 41    k -> asiglista
Rule 42    asiglista -> NEW LIST ( )
Rule 43    if -> IF ( expresion ) neur13 bloque l ;
Rule 44    neur13 -> <empty>
Rule 45    l -> empty neur15
Rule 46    l -> ELSE neur14 bloque
Rule 47    neur14 -> <empty>
Rule 48    neur15 -> <empty>
Rule 49    for -> FOR ( asignacion expresion asignacion ) bloque ;
Rule 50    expresion -> m subexpresion
Rule 51    m -> empty
Rule 52    m -> NOT
Rule 53    subexpresion -> exp neur10 o
Rule 54    neur10 -> <empty>
Rule 55    o -> empty
Rule 56    o -> AND neur9_1 subexpresion
Rule 57    o -> OR neur9_2 subexpresion
Rule 58    neur9_1 -> <empty>
Rule 59    neur9_2 -> <empty>
Rule 60    exp -> nexp p neur12
Rule 61    neur12 -> <empty>
Rule 62    p -> empty
Rule 63    p -> EQ neur11_1 nexp
Rule 64    p -> NOTEQ neur11_2 nexp
Rule 65    p -> > neur11_3 nexp
Rule 66    p -> < neur11_4 nexp
Rule 67    p -> MTHANEQ neur11_5 nexp
Rule 68    p -> LTHANEQ neur11_6 nexp
Rule 69    neur11_1 -> <empty>
Rule 70    neur11_2 -> <empty>
Rule 71    neur11_3 -> <empty>
Rule 72    neur11_4 -> <empty>
Rule 73    neur11_5 -> <empty>
Rule 74    neur11_6 -> <empty>
Rule 75    nexp -> termino neur5 q
Rule 76    neur5 -> <empty>
Rule 77    q -> empty
Rule 78    q -> + neur3_1 nexp
Rule 79    q -> - neur3_2 nexp
Rule 80    neur3_1 -> <empty>
Rule 81    neur3_2 -> <empty>
Rule 82    termino -> factor neur4 n
Rule 83    neur4 -> <empty>
Rule 84    n -> empty
Rule 85    n -> * neur2_1 termino
Rule 86    n -> / neur2_2 termino
Rule 87    neur2_1 -> <empty>
Rule 88    neur2_2 -> <empty>
Rule 89    factor -> ( neur6 expresion ) neur7
Rule 90    factor -> varcte neur1
Rule 91    neur6 -> <empty>
Rule 92    neur7 -> <empty>
Rule 93    neur1 -> <empty>
Rule 94    varcte -> ID r neurVar
Rule 95    varcte -> CTEE neurCteE
Rule 96    varcte -> CTEF neurCteF
Rule 97    varcte -> CTEBOOL neurCteB
Rule 98    varcte -> callfunc
Rule 99    varcte -> CTECHAR neurCteCh
Rule 100   neurVar -> <empty>
Rule 101   neurCteE -> <empty>
Rule 102   neurCteF -> <empty>
Rule 103   neurCteB -> <empty>
Rule 104   neurCteCh -> <empty>
Rule 105   r -> empty
Rule 106   r -> oplista
Rule 107   oplista -> ID . x
Rule 108   x -> inlistset
Rule 109   x -> append
Rule 110   x -> length
Rule 111   x -> getlist
Rule 112   x -> removelist
Rule 113   inlistset -> SET ( CTEE , expresion )
Rule 114   append -> APPEND ( expresion )
Rule 115   length -> LENGTH ( )
Rule 116   getlist -> GET ( expresion )
Rule 117   removelist -> REMOVE ( expresion )
Rule 118   while -> WHILE ( neur16 expresion ) neur13 bloque neur17 ;
Rule 119   neur16 -> <empty>
Rule 120   neur17 -> <empty>
Rule 121   play -> PLAY ( NOTA , CTEE ) ;
Rule 122   print -> PRINT expresion ;
Rule 123   callfunc -> CALL ID ( s ) ;
Rule 124   s -> empty
Rule 125   s -> expresion t
Rule 126   t -> empty
Rule 127   t -> , s
Rule 128   return -> RETURN ( expresion ) ;
Rule 129   tipo -> u y
Rule 130   u -> empty
Rule 131   u -> LIST
Rule 132   y -> INT
Rule 133   y -> CHAR
Rule 134   y -> FLOAT
Rule 135   y -> BOOL
Rule 136   empty -> <empty>

Terminals, with rules where they appear

(                    : 13 29 42 43 49 89 113 114 115 116 117 118 121 123 128
)                    : 13 29 42 43 49 89 113 114 115 116 117 118 121 123 128
*                    : 85
+                    : 78
,                    : 23 113 121 127
-                    : 79
.                    : 107
/                    : 86
:                    : 11
;                    : 11 38 43 49 118 121 122 123 128
<                    : 66
=                    : 38
>                    : 65
AND                  : 56
APPEND               : 114
BOOL                 : 135
CALL                 : 123
CANCION              : 29
CHAR                 : 133
CTEBOOL              : 97
CTECHAR              : 99
CTEE                 : 29 95 113 121
CTEF                 : 96
ELSE                 : 46
EQ                   : 63
FLOAT                : 134
FOR                  : 49
FUNC                 : 13
GET                  : 116
ID                   : 12 13 20 38 94 107 123
IF                   : 43
INT                  : 132
LENGTH               : 115
LIST                 : 42 131
LTHANEQ              : 68
MTHANEQ              : 67
NEW                  : 42
NOT                  : 52
NOTA                 : 121
NOTEQ                : 64
OR                   : 57
PLAY                 : 121
PRINT                : 122
REMOVE               : 117
RETURN               : 128
SET                  : 113
VAR                  : 11
WHILE                : 118
error                : 
{                    : 28
}                    : 28

Nonterminals, with rules where they appear

a                    : 1 6
append               : 109
asiglista            : 41
asignacion           : 31 49 49
b                    : 4
bloque               : 13 29 43 46 49 118
c                    : 1 10
callfunc             : 98
cancion              : 1
creadirprocglobal    : 1
d                    : 8
empty                : 3 5 7 9 15 17 19 22 24 26 45 51 55 62 77 84 105 124 126 130
estatuto             : 25
exp                  : 53
expresion            : 40 43 49 89 113 114 116 117 118 122 125 128
f                    : 13 18 29
factor               : 82
for                  : 33
funcion              : 8
g                    : 16
getlist              : 111
h                    : 20
i                    : 27 28
if                   : 32
inlistset            : 108
j                    : 25
k                    : 38
l                    : 43
length               : 110
m                    : 50
metercancion         : 29
meterfuncion         : 13
meterparams          : 20
n                    : 82
neur1                : 90
neur10               : 53
neur11_1             : 63
neur11_2             : 64
neur11_3             : 65
neur11_4             : 66
neur11_5             : 67
neur11_6             : 68
neur12               : 60
neur13               : 43 118
neur14               : 46
neur15               : 45
neur16               : 118
neur17               : 118
neur2_1              : 85
neur2_2              : 86
neur3_1              : 78
neur3_2              : 79
neur4                : 82
neur5                : 75
neur6                : 89
neur7                : 89
neur8                : 38
neur9_1              : 56
neur9_2              : 57
neurCteB             : 97
neurCteCh            : 99
neurCteE             : 95
neurCteF             : 96
neurVar              : 94
nexp                 : 60 63 64 65 66 67 68 78 79
o                    : 53
oplista              : 106
p                    : 60
params               : 13 23
play                 : 36
print                : 37
programa             : 0
q                    : 75
r                    : 94
removelist           : 112
return               : 34
s                    : 123 127
subexpresion         : 50 56 57
t                    : 125
termino              : 75 85 86
tipo                 : 11 13 20
u                    : 129
v                    : 11
varcte               : 90
vars                 : 4 16
while                : 35
x                    : 107
y                    : 129

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . creadirprocglobal a c cancion
    (2) creadirprocglobal -> .

    VAR             reduce using rule 2 (creadirprocglobal -> .)
    FUNC            reduce using rule 2 (creadirprocglobal -> .)
    CANCION         reduce using rule 2 (creadirprocglobal -> .)

    programa                       shift and go to state 1
    creadirprocglobal              shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> creadirprocglobal . a c cancion
    (3) a -> . empty
    (4) a -> . vars b
    (136) empty -> .
    (11) vars -> . VAR v : tipo ;

    FUNC            reduce using rule 136 (empty -> .)
    CANCION         reduce using rule 136 (empty -> .)
    VAR             shift and go to state 5

    a                              shift and go to state 3
    vars                           shift and go to state 4
    empty                          shift and go to state 6

state 3

    (1) programa -> creadirprocglobal a . c cancion
    (7) c -> . empty
    (8) c -> . funcion d
    (136) empty -> .
    (13) funcion -> . FUNC tipo ID meterfuncion ( params ) f bloque

    CANCION         reduce using rule 136 (empty -> .)
    FUNC            shift and go to state 8

    c                              shift and go to state 7
    empty                          shift and go to state 9
    funcion                        shift and go to state 10

state 4

    (4) a -> vars . b
    (5) b -> . empty
    (6) b -> . a
    (136) empty -> .
    (3) a -> . empty
    (4) a -> . vars b
    (11) vars -> . VAR v : tipo ;

    FUNC            reduce using rule 136 (empty -> .)
    CANCION         reduce using rule 136 (empty -> .)
    VAR             shift and go to state 5

    a                              shift and go to state 11
    b                              shift and go to state 12
    vars                           shift and go to state 4
    empty                          shift and go to state 13

state 5

    (11) vars -> VAR . v : tipo ;
    (12) v -> . ID

    ID              shift and go to state 15

    v                              shift and go to state 14

state 6

    (3) a -> empty .

    FUNC            reduce using rule 3 (a -> empty .)
    CANCION         reduce using rule 3 (a -> empty .)


state 7

    (1) programa -> creadirprocglobal a c . cancion
    (29) cancion -> . CANCION ( CTEE ) metercancion f bloque

    CANCION         shift and go to state 16

    cancion                        shift and go to state 17

state 8

    (13) funcion -> FUNC . tipo ID meterfuncion ( params ) f bloque
    (129) tipo -> . u y
    (130) u -> . empty
    (131) u -> . LIST
    (136) empty -> .

    LIST            shift and go to state 19
    INT             reduce using rule 136 (empty -> .)
    CHAR            reduce using rule 136 (empty -> .)
    FLOAT           reduce using rule 136 (empty -> .)
    BOOL            reduce using rule 136 (empty -> .)

    tipo                           shift and go to state 18
    u                              shift and go to state 20
    empty                          shift and go to state 21

state 9

    (7) c -> empty .

    CANCION         reduce using rule 7 (c -> empty .)


state 10

    (8) c -> funcion . d
    (9) d -> . empty
    (10) d -> . c
    (136) empty -> .
    (7) c -> . empty
    (8) c -> . funcion d
    (13) funcion -> . FUNC tipo ID meterfuncion ( params ) f bloque

    CANCION         reduce using rule 136 (empty -> .)
    FUNC            shift and go to state 8

    c                              shift and go to state 22
    d                              shift and go to state 23
    empty                          shift and go to state 24
    funcion                        shift and go to state 10

state 11

    (6) b -> a .

    FUNC            reduce using rule 6 (b -> a .)
    CANCION         reduce using rule 6 (b -> a .)


state 12

    (4) a -> vars b .

    FUNC            reduce using rule 4 (a -> vars b .)
    CANCION         reduce using rule 4 (a -> vars b .)


state 13

    (5) b -> empty .
    (3) a -> empty .

  ! reduce/reduce conflict for FUNC resolved using rule 3 (a -> empty .)
  ! reduce/reduce conflict for CANCION resolved using rule 3 (a -> empty .)
    FUNC            reduce using rule 3 (a -> empty .)
    CANCION         reduce using rule 3 (a -> empty .)

  ! FUNC            [ reduce using rule 5 (b -> empty .) ]
  ! CANCION         [ reduce using rule 5 (b -> empty .) ]


state 14

    (11) vars -> VAR v . : tipo ;

    :               shift and go to state 25


state 15

    (12) v -> ID .

    :               reduce using rule 12 (v -> ID .)


state 16

    (29) cancion -> CANCION . ( CTEE ) metercancion f bloque

    (               shift and go to state 26


state 17

    (1) programa -> creadirprocglobal a c cancion .

    $end            reduce using rule 1 (programa -> creadirprocglobal a c cancion .)


state 18

    (13) funcion -> FUNC tipo . ID meterfuncion ( params ) f bloque

    ID              shift and go to state 27


state 19

    (131) u -> LIST .

    INT             reduce using rule 131 (u -> LIST .)
    CHAR            reduce using rule 131 (u -> LIST .)
    FLOAT           reduce using rule 131 (u -> LIST .)
    BOOL            reduce using rule 131 (u -> LIST .)


state 20

    (129) tipo -> u . y
    (132) y -> . INT
    (133) y -> . CHAR
    (134) y -> . FLOAT
    (135) y -> . BOOL

    INT             shift and go to state 28
    CHAR            shift and go to state 30
    FLOAT           shift and go to state 29
    BOOL            shift and go to state 32

    y                              shift and go to state 31

state 21

    (130) u -> empty .

    INT             reduce using rule 130 (u -> empty .)
    CHAR            reduce using rule 130 (u -> empty .)
    FLOAT           reduce using rule 130 (u -> empty .)
    BOOL            reduce using rule 130 (u -> empty .)


state 22

    (10) d -> c .

    CANCION         reduce using rule 10 (d -> c .)


state 23

    (8) c -> funcion d .

    CANCION         reduce using rule 8 (c -> funcion d .)


state 24

    (9) d -> empty .
    (7) c -> empty .

  ! reduce/reduce conflict for CANCION resolved using rule 7 (c -> empty .)
    CANCION         reduce using rule 7 (c -> empty .)

  ! CANCION         [ reduce using rule 9 (d -> empty .) ]


state 25

    (11) vars -> VAR v : . tipo ;
    (129) tipo -> . u y
    (130) u -> . empty
    (131) u -> . LIST
    (136) empty -> .

    LIST            shift and go to state 19
    INT             reduce using rule 136 (empty -> .)
    CHAR            reduce using rule 136 (empty -> .)
    FLOAT           reduce using rule 136 (empty -> .)
    BOOL            reduce using rule 136 (empty -> .)

    u                              shift and go to state 20
    empty                          shift and go to state 21
    tipo                           shift and go to state 33

state 26

    (29) cancion -> CANCION ( . CTEE ) metercancion f bloque

    CTEE            shift and go to state 34


state 27

    (13) funcion -> FUNC tipo ID . meterfuncion ( params ) f bloque
    (14) meterfuncion -> .

    (               reduce using rule 14 (meterfuncion -> .)

    meterfuncion                   shift and go to state 35

state 28

    (132) y -> INT .

    ID              reduce using rule 132 (y -> INT .)
    ;               reduce using rule 132 (y -> INT .)


state 29

    (134) y -> FLOAT .

    ID              reduce using rule 134 (y -> FLOAT .)
    ;               reduce using rule 134 (y -> FLOAT .)


state 30

    (133) y -> CHAR .

    ID              reduce using rule 133 (y -> CHAR .)
    ;               reduce using rule 133 (y -> CHAR .)


state 31

    (129) tipo -> u y .

    ID              reduce using rule 129 (tipo -> u y .)
    ;               reduce using rule 129 (tipo -> u y .)


state 32

    (135) y -> BOOL .

    ID              reduce using rule 135 (y -> BOOL .)
    ;               reduce using rule 135 (y -> BOOL .)


state 33

    (11) vars -> VAR v : tipo . ;

    ;               shift and go to state 36


state 34

    (29) cancion -> CANCION ( CTEE . ) metercancion f bloque

    )               shift and go to state 37


state 35

    (13) funcion -> FUNC tipo ID meterfuncion . ( params ) f bloque

    (               shift and go to state 38


state 36

    (11) vars -> VAR v : tipo ; .

    VAR             reduce using rule 11 (vars -> VAR v : tipo ; .)
    FUNC            reduce using rule 11 (vars -> VAR v : tipo ; .)
    CANCION         reduce using rule 11 (vars -> VAR v : tipo ; .)
    {               reduce using rule 11 (vars -> VAR v : tipo ; .)


state 37

    (29) cancion -> CANCION ( CTEE ) . metercancion f bloque
    (30) metercancion -> .

    VAR             reduce using rule 30 (metercancion -> .)
    {               reduce using rule 30 (metercancion -> .)

    metercancion                   shift and go to state 39

state 38

    (13) funcion -> FUNC tipo ID meterfuncion ( . params ) f bloque
    (19) params -> . empty
    (20) params -> . tipo ID meterparams h
    (136) empty -> .
    (129) tipo -> . u y
    (130) u -> . empty
    (131) u -> . LIST

    )               reduce using rule 136 (empty -> .)
    INT             reduce using rule 136 (empty -> .)
    CHAR            reduce using rule 136 (empty -> .)
    FLOAT           reduce using rule 136 (empty -> .)
    BOOL            reduce using rule 136 (empty -> .)
    LIST            shift and go to state 19

    tipo                           shift and go to state 40
    params                         shift and go to state 41
    u                              shift and go to state 20
    empty                          shift and go to state 42

state 39

    (29) cancion -> CANCION ( CTEE ) metercancion . f bloque
    (15) f -> . empty
    (16) f -> . vars g
    (136) empty -> .
    (11) vars -> . VAR v : tipo ;

    {               reduce using rule 136 (empty -> .)
    VAR             shift and go to state 5

    vars                           shift and go to state 43
    f                              shift and go to state 44
    empty                          shift and go to state 45

state 40

    (20) params -> tipo . ID meterparams h

    ID              shift and go to state 46


state 41

    (13) funcion -> FUNC tipo ID meterfuncion ( params . ) f bloque

    )               shift and go to state 47


state 42

    (19) params -> empty .
    (130) u -> empty .

    )               reduce using rule 19 (params -> empty .)
    INT             reduce using rule 130 (u -> empty .)
    CHAR            reduce using rule 130 (u -> empty .)
    FLOAT           reduce using rule 130 (u -> empty .)
    BOOL            reduce using rule 130 (u -> empty .)


state 43

    (16) f -> vars . g
    (17) g -> . empty
    (18) g -> . f
    (136) empty -> .
    (15) f -> . empty
    (16) f -> . vars g
    (11) vars -> . VAR v : tipo ;

    {               reduce using rule 136 (empty -> .)
    VAR             shift and go to state 5

    g                              shift and go to state 48
    f                              shift and go to state 49
    vars                           shift and go to state 43
    empty                          shift and go to state 50

state 44

    (29) cancion -> CANCION ( CTEE ) metercancion f . bloque
    (28) bloque -> . { i }

    {               shift and go to state 51

    bloque                         shift and go to state 52

state 45

    (15) f -> empty .

    {               reduce using rule 15 (f -> empty .)


state 46

    (20) params -> tipo ID . meterparams h
    (21) meterparams -> .

    ,               reduce using rule 21 (meterparams -> .)
    )               reduce using rule 21 (meterparams -> .)

    meterparams                    shift and go to state 53

state 47

    (13) funcion -> FUNC tipo ID meterfuncion ( params ) . f bloque
    (15) f -> . empty
    (16) f -> . vars g
    (136) empty -> .
    (11) vars -> . VAR v : tipo ;

    {               reduce using rule 136 (empty -> .)
    VAR             shift and go to state 5

    vars                           shift and go to state 43
    f                              shift and go to state 54
    empty                          shift and go to state 45

state 48

    (16) f -> vars g .

    {               reduce using rule 16 (f -> vars g .)


state 49

    (18) g -> f .

    {               reduce using rule 18 (g -> f .)


state 50

    (17) g -> empty .
    (15) f -> empty .

  ! reduce/reduce conflict for { resolved using rule 15 (f -> empty .)
    {               reduce using rule 15 (f -> empty .)

  ! {               [ reduce using rule 17 (g -> empty .) ]


state 51

    (28) bloque -> { . i }
    (24) i -> . empty
    (25) i -> . estatuto j
    (136) empty -> .
    (31) estatuto -> . asignacion
    (32) estatuto -> . if
    (33) estatuto -> . for
    (34) estatuto -> . return
    (35) estatuto -> . while
    (36) estatuto -> . play
    (37) estatuto -> . print
    (38) asignacion -> . ID = neur8 k ;
    (43) if -> . IF ( expresion ) neur13 bloque l ;
    (49) for -> . FOR ( asignacion expresion asignacion ) bloque ;
    (128) return -> . RETURN ( expresion ) ;
    (118) while -> . WHILE ( neur16 expresion ) neur13 bloque neur17 ;
    (121) play -> . PLAY ( NOTA , CTEE ) ;
    (122) print -> . PRINT expresion ;

    }               reduce using rule 136 (empty -> .)
    ID              shift and go to state 67
    IF              shift and go to state 68
    FOR             shift and go to state 66
    RETURN          shift and go to state 55
    WHILE           shift and go to state 57
    PLAY            shift and go to state 56
    PRINT           shift and go to state 58

    play                           shift and go to state 64
    return                         shift and go to state 65
    for                            shift and go to state 60
    asignacion                     shift and go to state 69
    i                              shift and go to state 70
    estatuto                       shift and go to state 61
    while                          shift and go to state 71
    print                          shift and go to state 62
    empty                          shift and go to state 63
    if                             shift and go to state 59

state 52

    (29) cancion -> CANCION ( CTEE ) metercancion f bloque .

    $end            reduce using rule 29 (cancion -> CANCION ( CTEE ) metercancion f bloque .)


state 53

    (20) params -> tipo ID meterparams . h
    (22) h -> . empty
    (23) h -> . , params
    (136) empty -> .

    ,               shift and go to state 73
    )               reduce using rule 136 (empty -> .)

    h                              shift and go to state 72
    empty                          shift and go to state 74

state 54

    (13) funcion -> FUNC tipo ID meterfuncion ( params ) f . bloque
    (28) bloque -> . { i }

    {               shift and go to state 51

    bloque                         shift and go to state 75

state 55

    (128) return -> RETURN . ( expresion ) ;

    (               shift and go to state 76


state 56

    (121) play -> PLAY . ( NOTA , CTEE ) ;

    (               shift and go to state 77


state 57

    (118) while -> WHILE . ( neur16 expresion ) neur13 bloque neur17 ;

    (               shift and go to state 78


state 58

    (122) print -> PRINT . expresion ;
    (50) expresion -> . m subexpresion
    (51) m -> . empty
    (52) m -> . NOT
    (136) empty -> .

    NOT             shift and go to state 81
    (               reduce using rule 136 (empty -> .)
    ID              reduce using rule 136 (empty -> .)
    CTEE            reduce using rule 136 (empty -> .)
    CTEF            reduce using rule 136 (empty -> .)
    CTEBOOL         reduce using rule 136 (empty -> .)
    CTECHAR         reduce using rule 136 (empty -> .)
    CALL            reduce using rule 136 (empty -> .)

    expresion                      shift and go to state 79
    m                              shift and go to state 80
    empty                          shift and go to state 82

state 59

    (32) estatuto -> if .

    ID              reduce using rule 32 (estatuto -> if .)
    IF              reduce using rule 32 (estatuto -> if .)
    FOR             reduce using rule 32 (estatuto -> if .)
    RETURN          reduce using rule 32 (estatuto -> if .)
    WHILE           reduce using rule 32 (estatuto -> if .)
    PLAY            reduce using rule 32 (estatuto -> if .)
    PRINT           reduce using rule 32 (estatuto -> if .)
    }               reduce using rule 32 (estatuto -> if .)


state 60

    (33) estatuto -> for .

    ID              reduce using rule 33 (estatuto -> for .)
    IF              reduce using rule 33 (estatuto -> for .)
    FOR             reduce using rule 33 (estatuto -> for .)
    RETURN          reduce using rule 33 (estatuto -> for .)
    WHILE           reduce using rule 33 (estatuto -> for .)
    PLAY            reduce using rule 33 (estatuto -> for .)
    PRINT           reduce using rule 33 (estatuto -> for .)
    }               reduce using rule 33 (estatuto -> for .)


state 61

    (25) i -> estatuto . j
    (26) j -> . empty
    (27) j -> . i
    (136) empty -> .
    (24) i -> . empty
    (25) i -> . estatuto j
    (31) estatuto -> . asignacion
    (32) estatuto -> . if
    (33) estatuto -> . for
    (34) estatuto -> . return
    (35) estatuto -> . while
    (36) estatuto -> . play
    (37) estatuto -> . print
    (38) asignacion -> . ID = neur8 k ;
    (43) if -> . IF ( expresion ) neur13 bloque l ;
    (49) for -> . FOR ( asignacion expresion asignacion ) bloque ;
    (128) return -> . RETURN ( expresion ) ;
    (118) while -> . WHILE ( neur16 expresion ) neur13 bloque neur17 ;
    (121) play -> . PLAY ( NOTA , CTEE ) ;
    (122) print -> . PRINT expresion ;

    }               reduce using rule 136 (empty -> .)
    ID              shift and go to state 67
    IF              shift and go to state 68
    FOR             shift and go to state 66
    RETURN          shift and go to state 55
    WHILE           shift and go to state 57
    PLAY            shift and go to state 56
    PRINT           shift and go to state 58

    play                           shift and go to state 64
    j                              shift and go to state 85
    return                         shift and go to state 65
    for                            shift and go to state 60
    asignacion                     shift and go to state 69
    i                              shift and go to state 84
    estatuto                       shift and go to state 61
    while                          shift and go to state 71
    print                          shift and go to state 62
    empty                          shift and go to state 83
    if                             shift and go to state 59

state 62

    (37) estatuto -> print .

    ID              reduce using rule 37 (estatuto -> print .)
    IF              reduce using rule 37 (estatuto -> print .)
    FOR             reduce using rule 37 (estatuto -> print .)
    RETURN          reduce using rule 37 (estatuto -> print .)
    WHILE           reduce using rule 37 (estatuto -> print .)
    PLAY            reduce using rule 37 (estatuto -> print .)
    PRINT           reduce using rule 37 (estatuto -> print .)
    }               reduce using rule 37 (estatuto -> print .)


state 63

    (24) i -> empty .

    }               reduce using rule 24 (i -> empty .)


state 64

    (36) estatuto -> play .

    ID              reduce using rule 36 (estatuto -> play .)
    IF              reduce using rule 36 (estatuto -> play .)
    FOR             reduce using rule 36 (estatuto -> play .)
    RETURN          reduce using rule 36 (estatuto -> play .)
    WHILE           reduce using rule 36 (estatuto -> play .)
    PLAY            reduce using rule 36 (estatuto -> play .)
    PRINT           reduce using rule 36 (estatuto -> play .)
    }               reduce using rule 36 (estatuto -> play .)


state 65

    (34) estatuto -> return .

    ID              reduce using rule 34 (estatuto -> return .)
    IF              reduce using rule 34 (estatuto -> return .)
    FOR             reduce using rule 34 (estatuto -> return .)
    RETURN          reduce using rule 34 (estatuto -> return .)
    WHILE           reduce using rule 34 (estatuto -> return .)
    PLAY            reduce using rule 34 (estatuto -> return .)
    PRINT           reduce using rule 34 (estatuto -> return .)
    }               reduce using rule 34 (estatuto -> return .)


state 66

    (49) for -> FOR . ( asignacion expresion asignacion ) bloque ;

    (               shift and go to state 86


state 67

    (38) asignacion -> ID . = neur8 k ;

    =               shift and go to state 87


state 68

    (43) if -> IF . ( expresion ) neur13 bloque l ;

    (               shift and go to state 88


state 69

    (31) estatuto -> asignacion .

    ID              reduce using rule 31 (estatuto -> asignacion .)
    IF              reduce using rule 31 (estatuto -> asignacion .)
    FOR             reduce using rule 31 (estatuto -> asignacion .)
    RETURN          reduce using rule 31 (estatuto -> asignacion .)
    WHILE           reduce using rule 31 (estatuto -> asignacion .)
    PLAY            reduce using rule 31 (estatuto -> asignacion .)
    PRINT           reduce using rule 31 (estatuto -> asignacion .)
    }               reduce using rule 31 (estatuto -> asignacion .)


state 70

    (28) bloque -> { i . }

    }               shift and go to state 89


state 71

    (35) estatuto -> while .

    ID              reduce using rule 35 (estatuto -> while .)
    IF              reduce using rule 35 (estatuto -> while .)
    FOR             reduce using rule 35 (estatuto -> while .)
    RETURN          reduce using rule 35 (estatuto -> while .)
    WHILE           reduce using rule 35 (estatuto -> while .)
    PLAY            reduce using rule 35 (estatuto -> while .)
    PRINT           reduce using rule 35 (estatuto -> while .)
    }               reduce using rule 35 (estatuto -> while .)


state 72

    (20) params -> tipo ID meterparams h .

    )               reduce using rule 20 (params -> tipo ID meterparams h .)


state 73

    (23) h -> , . params
    (19) params -> . empty
    (20) params -> . tipo ID meterparams h
    (136) empty -> .
    (129) tipo -> . u y
    (130) u -> . empty
    (131) u -> . LIST

    )               reduce using rule 136 (empty -> .)
    INT             reduce using rule 136 (empty -> .)
    CHAR            reduce using rule 136 (empty -> .)
    FLOAT           reduce using rule 136 (empty -> .)
    BOOL            reduce using rule 136 (empty -> .)
    LIST            shift and go to state 19

    tipo                           shift and go to state 40
    u                              shift and go to state 20
    params                         shift and go to state 90
    empty                          shift and go to state 42

state 74

    (22) h -> empty .

    )               reduce using rule 22 (h -> empty .)


state 75

    (13) funcion -> FUNC tipo ID meterfuncion ( params ) f bloque .

    FUNC            reduce using rule 13 (funcion -> FUNC tipo ID meterfuncion ( params ) f bloque .)
    CANCION         reduce using rule 13 (funcion -> FUNC tipo ID meterfuncion ( params ) f bloque .)


state 76

    (128) return -> RETURN ( . expresion ) ;
    (50) expresion -> . m subexpresion
    (51) m -> . empty
    (52) m -> . NOT
    (136) empty -> .

    NOT             shift and go to state 81
    (               reduce using rule 136 (empty -> .)
    ID              reduce using rule 136 (empty -> .)
    CTEE            reduce using rule 136 (empty -> .)
    CTEF            reduce using rule 136 (empty -> .)
    CTEBOOL         reduce using rule 136 (empty -> .)
    CTECHAR         reduce using rule 136 (empty -> .)
    CALL            reduce using rule 136 (empty -> .)

    expresion                      shift and go to state 91
    m                              shift and go to state 80
    empty                          shift and go to state 82

state 77

    (121) play -> PLAY ( . NOTA , CTEE ) ;

    NOTA            shift and go to state 92


state 78

    (118) while -> WHILE ( . neur16 expresion ) neur13 bloque neur17 ;
    (119) neur16 -> .

    NOT             reduce using rule 119 (neur16 -> .)
    (               reduce using rule 119 (neur16 -> .)
    ID              reduce using rule 119 (neur16 -> .)
    CTEE            reduce using rule 119 (neur16 -> .)
    CTEF            reduce using rule 119 (neur16 -> .)
    CTEBOOL         reduce using rule 119 (neur16 -> .)
    CTECHAR         reduce using rule 119 (neur16 -> .)
    CALL            reduce using rule 119 (neur16 -> .)

    neur16                         shift and go to state 93

state 79

    (122) print -> PRINT expresion . ;

    ;               shift and go to state 94


state 80

    (50) expresion -> m . subexpresion
    (53) subexpresion -> . exp neur10 o
    (60) exp -> . nexp p neur12
    (75) nexp -> . termino neur5 q
    (82) termino -> . factor neur4 n
    (89) factor -> . ( neur6 expresion ) neur7
    (90) factor -> . varcte neur1
    (94) varcte -> . ID r neurVar
    (95) varcte -> . CTEE neurCteE
    (96) varcte -> . CTEF neurCteF
    (97) varcte -> . CTEBOOL neurCteB
    (98) varcte -> . callfunc
    (99) varcte -> . CTECHAR neurCteCh
    (123) callfunc -> . CALL ID ( s ) ;

    (               shift and go to state 98
    ID              shift and go to state 103
    CTEE            shift and go to state 108
    CTEF            shift and go to state 106
    CTEBOOL         shift and go to state 104
    CTECHAR         shift and go to state 96
    CALL            shift and go to state 101

    termino                        shift and go to state 95
    varcte                         shift and go to state 97
    nexp                           shift and go to state 99
    factor                         shift and go to state 100
    subexpresion                   shift and go to state 102
    callfunc                       shift and go to state 105
    exp                            shift and go to state 107

state 81

    (52) m -> NOT .

    (               reduce using rule 52 (m -> NOT .)
    ID              reduce using rule 52 (m -> NOT .)
    CTEE            reduce using rule 52 (m -> NOT .)
    CTEF            reduce using rule 52 (m -> NOT .)
    CTEBOOL         reduce using rule 52 (m -> NOT .)
    CTECHAR         reduce using rule 52 (m -> NOT .)
    CALL            reduce using rule 52 (m -> NOT .)


state 82

    (51) m -> empty .

    (               reduce using rule 51 (m -> empty .)
    ID              reduce using rule 51 (m -> empty .)
    CTEE            reduce using rule 51 (m -> empty .)
    CTEF            reduce using rule 51 (m -> empty .)
    CTEBOOL         reduce using rule 51 (m -> empty .)
    CTECHAR         reduce using rule 51 (m -> empty .)
    CALL            reduce using rule 51 (m -> empty .)


state 83

    (26) j -> empty .
    (24) i -> empty .

  ! reduce/reduce conflict for } resolved using rule 24 (i -> empty .)
    }               reduce using rule 24 (i -> empty .)
